--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
     background-image: url('Images/backgroundSandyMenu.png');
     background-color: black;
+    z-index: 0;
 }
 
 #gameLaunch {
@@ -161,6 +162,18 @@ button:hover {
     align-items: center;
     width:148px;
     height:112px;
+    display:block;
+}
+
+#ko-img {
+    position: absolute;
+    left:45.2%;
+    top: 2%;
+    width:148px;
+    height: 112px;
+    display:none;
+    z-index: 12;
+    opacity:1;
 }
 
 #avatarP1, #avatarP2 {
@@ -197,7 +210,7 @@ button:hover {
     margin : 4px 8px;
     width:29%;
     height:6.5%;
-    background-color: red;
+    background-color: rgb(255, 230, 0);
     z-index: 2;
 }
 
@@ -206,7 +219,7 @@ button:hover {
     margin : 4px 8px;
     width:29%;
     height:6.5%;
-    background-color: rgb(255, 230, 0);
+    background-color: red;
     z-index: 1;
 }
 
@@ -264,7 +277,7 @@ button:hover {
     flex:1;
     display:flex;
     flex-direction:row;
-    margin-top: -3%;
+    margin: -3% 5% 0 5%;    
     justify-content:center;
     background-color: rgba(177, 190, 190, 0.514);
     width: fit-content;
@@ -272,6 +285,7 @@ button:hover {
 
 #answerForm input {
     background-color: rgba(136, 145, 145, 0.493);
+    font-size: 25px;
 }
 
 /*==================== SCENE BASTON ==================================*/
@@ -294,7 +308,7 @@ button:hover {
     position:absolute;
     left: 12%;
     bottom: 35%;
-    z-index:2;
+    z-index:6;
 }
 
 #perso2 {
@@ -302,16 +316,16 @@ button:hover {
     position:absolute;
     right: 12%;
     bottom: 35%;
-    z-index:2;
+    z-index:6;
 }
 
 #aura1 {
-    width:250px;
+    width:220px;
     position:absolute;
-    left: 8%;
-    bottom: 19%;
+    left: 9%;
+    bottom: 9%;
     display:none;
-    z-index:1;
+    z-index:7;
 }
 
 #aura2 {
@@ -320,7 +334,7 @@ button:hover {
     right: 8%;
     bottom: 19%;
     display:none;
-    z-index:1;
+    z-index:5;
 }
 
 #roundP1 {
@@ -332,7 +346,7 @@ button:hover {
     margin-top: 3%;
     left: 23%;
     display: none;
-    z-index:4;
+    z-index:7;
     border-radius: 40%;
 }
 
@@ -345,7 +359,7 @@ button:hover {
     margin-top: 3%;
     right: 23%;
     display: none;
-    z-index:4;
+    z-index:7;
     border-radius: 40%;
 }
 
@@ -564,21 +578,39 @@ button:hover {
 
 @keyframes shake{
     0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.errorEntry {
+    animation-name: errorEntry;
+    animation-duration:0.2s;
+    animation-iteration-count:4;
+}
+
+@keyframes errorEntry {
+    0%{
+        border:none;
+    }
+    50%{
+        border: 5px solid red;
+    }
+    100%{
+        border:none;
+    }
 }
 
 .attack2perso2 {
     animation-name: blinkDashP2;
-    animation-duration:5s;
+    animation-duration:3s;
     animation-iteration-count:1; 
 }
 
@@ -648,7 +680,7 @@ button:hover {
 
 .attack2perso1 {
     animation-name: blinkDashP1;
-    animation-duration:5s;
+    animation-duration:3s;
     animation-iteration-count:1;
 }
 
@@ -894,6 +926,15 @@ button:hover {
     }
 }
 
+@keyframes finish {
+    0%{
+        color: red;
+    }
+    50% {
+        color:yellow;
+    }
+}
+
 /*========================= MESSAGE EN JEU ======================*/
 
 #message {
@@ -948,7 +989,7 @@ button:hover {
     align-items:center;
     justify-content:space-around;
     display:none;
-    color:red;
+    color:black;
 }
 
 #endingScreen h2 {
@@ -961,7 +1002,39 @@ button:hover {
     margin-top: -50px;
 }
 
+#finishDiv {
+    position: absolute;
+    top:33%;
+    left:18%;
+    font-size: 120px;
+    letter-spacing: 0.2em;
+    color:red;
+    text-shadow: 5px 5px 3px black;
+    animation-name: finish;
+    animation-duration: 0.12s;
+    animation-iteration-count: 7;
+    display:none;
+}
 
+#altback {
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    top:0;
+    left: 0;
+    position: absolute;
+    z-index: 4;
+    opacity:0;
+    display: none;
+}
+
+#koscreen {
+    position: absolute;
+    top:25%;
+    left:35%;
+    z-index: 15;
+    display:none;
+}
 
 
 
