--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     background-size:cover;
     overflow:hidden;
     z-index: 3;    
+    user-select: none; 
 }
 
 /*=================  MENU LANCEMENT JEU ===================== */
