--- a/style.css
+++ b/style.css
@@ -270,8 +270,8 @@ button {
 }
 
 .lightname2 {
-    background-color:rgba(37,39,39,0.753);
-    color:aliceblue;
+    background-color:rgba(158, 142, 142, 0.753);
+    color:rgb(160,214,60);
     border-radius:30%;
 }
 
