--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face { 	font-family: "Fighter"; 	src: url('Font/Fighter.ttf'); }
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&display=swap');
 html, body {
     padding: 0;
     margin: 0;
@@ -68,7 +68,7 @@ fieldset {
 }
 
 form {
-    margin:5%;
+    margin: 5% 5% 1% 5%;
     font-size:25px;
 }
 
@@ -78,6 +78,7 @@ form legend {
 
 form input {
     font-size: 25px;
+    border: 2px solid black;
 }
 
 fieldset {
@@ -86,7 +87,7 @@ fieldset {
 }
 
 .formError {
-    border: 7px solid red;
+    border: 4px solid red;
 }
 
 #menu input {
@@ -97,7 +98,10 @@ fieldset {
 
 .errAPI {
     color:red;
-    font-size:30px;    
+    background-color: white;
+    border: 2px solid red;
+    font-size:30px; 
+    padding: 5px 10px 5px 10px;   
     margin-right:20%;
     letter-spacing: 0.2em;
 }
@@ -120,17 +124,23 @@ fieldset {
     font-size:larger;
     align-items:center;
     flex-direction:column;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.1em;
+    width:fit-content;
+    margin: auto;
+    background-color: rgb(10, 28, 110);    
+    border: 2px solid white;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 #rules p {
     text-decoration:underline;
     font-size:28px;
-    margin: 0;
+    margin: 10px 0 0 0;
 }
 
 #rules ul li {
     font-size:22px;
+    margin: 0 7px 0 0;
 }
 
 /*====================== CONTENEUR JEU ======================*/
